# home-kgqa

./: .gitignore  README.md  add_places.py  create_prompt_dataset.py  generate_episodic_kg.py  generate_questions.py  merge_generated_questions.py  paraphrase_questions.py  pyproject.toml  split_dataset.py
data/: HOE-KGQA_prompt_dataset_raw_compositional.jsonl
dataset/kg/: README.md  vh2kg_schema_v2.0.0.ttl
dataset/others/: lancers_task.csv
dataset/prompt/: HOE-KGQA_prompt_dataset_paraphrased_compositional.jsonl  HOE-KGQA_prompt_dataset_paraphrased_iid.jsonl  HOE-KGQA_prompt_dataset_raw_iid.jsonl  README.md
dataset/qa/: README.md  test_compositional_700.jsonl  test_iid_700.jsonl  train_compositional_350.jsonl  train_iid_350.jsonl
generated_questions/: question_dataset_Action_5.jsonl  question_dataset_Activity_5.jsonl  question_dataset_Aggregation_5.jsonl  question_dataset_Object_5.jsonl  question_dataset_Space_1.jsonl  question_dataset_Space_2.jsonl  question_dataset_Space_5.jsonl  question_dataset_Time_1.jsonl  question_dataset_Time_5.jsonl  question_dataset_Video_5.jsonl
genqa/: __init__.py  config.py  extract.py  query_patterns.py  question_generator.py
preprocess/: gold_dataset.json
