[project]
name = "home-kgqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "en-core-web-sm",
    "numpy>=1.24.0",
    "openai>=2.5.0",
    "pyinflect>=0.5.1",
    "scikit-learn>=1.3.0",
    "spacy>=3.8.7",
    "sparqlwrapper>=2.0.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
